[package]
name = "opaque_rust"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["staticlib"]

[profile.release]
lto = true

[features]
default = []
p256 = ["dep:p256"]

[dependencies]
argon2 = "0.5"
cxx = { version = "1.0" }
opaque-ke = { version = "4.0.0", features = ["argon2"] }
sha2 = "0.10"
base64 = "0.21"
rand = { version = "0.8" }
getrandom = { version = "0.2" }
p256 = { version = "0.13", default-features = false, features = ["hash2curve", "voprf"], optional = true }
